# MyServers

./: CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
app/: .gitignore  Cargo.toml
app/public/: app.js  index.html  presets.json  style.css
app/src/: main.rs  manager.rs  server.rs
public/: app.js  index.html  style.css
src/: main.rs  manager.rs  server.rs
